--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
       <div class="hero-img banner">
         <h1>Exclusive watches</h1>
       </div>
-        <div class="featured-container d-flex .flex-column flex-md-row"></div>
+      <div class="container">
+        <div class="featured-container row row-cols-1 row-cols-sm-2 row-cols-md-4"></div>
+        </div>
       </div>
     </main>
     <script src="node_modules\bootstrap\dist\js\bootstrap.bundle.min.js"></script>
