--- a/watches.html
+++ b/watches.html
@@ -12,6 +12,10 @@
         <nav class="navbar navbar-expand-lg bg-light"></nav>
     </header>
     <main>
+        <div class="input-group input-group-sm mb-3">
+            <span class="input-group-text" >Search</span>
+            <input type="text" id="filter" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-sm">
+          </div>
         <div class="container">
             <div class="product-container row row-cols-1 row-cols-sm-2 row-cols-md-4"></div>
         </div>
