--- a/cart.html
+++ b/cart.html
@@ -14,7 +14,7 @@
     <div class="row d-flex justify-content-center">
         <div class="cart-container col-xl-11"></div>
     </div>
-    <script src="node_modules\bootstrap\dist\js\bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
     <script src="js/cart.js" type="module"></script>
 </body>
 </html>
