--- a/watches.html
+++ b/watches.html
@@ -20,7 +20,7 @@
             <div class="product-container row row-cols-1 row-cols-sm-2 row-cols-md-4"></div>
         </div>
     </main>
-    <script src="node_modules\bootstrap\dist\js\bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
     <script src="js/watches.js" type="module"></script>
 </body>
 </html>
