--- a/cart.html
+++ b/cart.html
@@ -14,6 +14,16 @@
     <div class="row d-flex justify-content-center">
         <div class="cart-container col-xl-11"></div>
     </div>
+    <div class="card">
+        <h5 class="card-header">Totals</h5>
+        <div class="card-body">
+          <div class="row d-flex">
+            <h5 class="card-title">Shopping cart totals</h5>
+            <h5 class="card-text cart-total"></h5>
+            </div>
+          <a href="#" class="btn btn-primary">Checkout</a>
+        </div>
+      </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
     <script src="js/cart.js" type="module"></script>
 </body>
