--- a/login.html
+++ b/login.html
@@ -15,15 +15,15 @@
         <form>
             <div class="display-message">
             </div>
-            <div>
-                <label for="username">Username/Email</label>
-                <input type="text" id="username">
-            </div>
-            <div>
-                <label for="password">Password</label>
-                <input type="password" id="password">
-            </div>
-            <button>Submit</button>
+            <div class="input-group mb-3">
+                <span class="input-group-text" id="basic-addon1">User</span>
+                <input type="text" id="username" class="form-control" placeholder="Username" aria-label="Username" aria-describedby="basic-addon1" required>
+              </div>
+              <div class="input-group mb-3">
+                <span class="input-group-text" id="basic-addon1">Pass</span>
+                <input type="password" id="password" class="form-control" placeholder="Password" aria-label="password" aria-describedby="basic-addon1" required>
+              </div>
+            <button class="btn btn-primary">Submit</button>
         </form>
     </div>
     <footer></footer>
