styles and more

--- a/cart.html
+++ b/cart.html
@@ -9,12 +9,13 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg bg-light"></nav>
+      <nav class="navbar navbar-dark navbar-expand-lg dark-bg"></nav>
     </header>
-    <div class="row d-flex justify-content-center">
+    <div class="wrapper">
+    <div class="row d-flex justify-content-center cart-content">
         <div class="cart-container col-xl-11"></div>
     </div>
-    <div class="card">
+    <div class="card totals-card">
         <h5 class="card-header">Totals</h5>
         <div class="card-body">
           <div class="row d-flex">
@@ -24,6 +25,8 @@
           <a href="#" class="btn btn-primary">Checkout</a>
         </div>
       </div>
+    </div> 
+    <footer></footer> 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
     <script src="js/cart.js" type="module"></script>
 </body>
