--- a/watches.html
+++ b/watches.html
@@ -9,17 +9,22 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg bg-light"></nav>
+        <nav class="navbar navbar-dark navbar-expand-lg dark-bg"></nav>
     </header>
-    <main>
-        <div class="input-group input-group-sm mb-3">
+    <div class="wrapper">
+        <div class="input-group input-group-s mb-3 filter">
             <span class="input-group-text" >Search</span>
             <input type="text" id="filter" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-sm">
           </div>
         <div class="container">
-            <div class="product-container row row-cols-1 row-cols-sm-2 row-cols-md-4"></div>
-        </div>
-    </main>
+            <div class="product-container gap-1 row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 row-cols-xl-5">
+                <div class="spinner-grow text-primary" role="status">
+                    <span class="visually-hidden">Loading...</span>
+                  </div>
+            </div>
+        </div> 
+    </div>
+    <footer></footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
     <script src="js/watches.js" type="module"></script>
 </body>
