--- a/details.html
+++ b/details.html
@@ -8,9 +8,9 @@
     <title>Home</title>
 </head>
 <header>
-    <nav class="navbar navbar-expand-lg bg-light"></nav>
+    <nav class="navbar navbar-dark navbar-expand-lg dark-bg"></nav>
 </header>
-<main>
+    <div class="wrapper">
     <div class="container mt-5 mb-5">
         <div class="row d-flex justify-content-center">
             <div class="col-md-10">
@@ -33,7 +33,8 @@
             </div>
         </div>
     </div>
-</main>
+</div>
+<footer></footer>
 <body>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
     <script src="js/details.js" type="module"></script>
