--- a/edit.html
+++ b/edit.html
@@ -9,12 +9,15 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg bg-light"></nav>
+        <nav class="navbar navbar-dark navbar-expand-lg dark-bg"></nav>
     </header>
-    <main>
-        <h1></h1>
+    <div class="wrapper">
+        <h1 class="text-center"></h1>
         <div class="display-message"></div>
-        <img src="" class="img-thumbnail" alt="...">
+        <div class="container">
+          <div class="row row-cols-1 row-cols-lg-2">
+        <img src="" class="img-thumbnail d-block mx-auto" alt="...">
+      
         <form>
             <div class="input-group mb-3">
                 <span class="input-group-text" id="inputGroup-sizing-default">Id</span>
@@ -46,8 +49,10 @@
               <button type="submit" class="btn btn-primary mb-3">Submit changes</button>
               <div class="delete-container"></div>
         </form>
-      
-    </main>
+      </div>
+      </div>
+      </div>
+      <footer></footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
     <script src="js/edit.js" type="module"></script>
 </body>
