--- a/login.html
+++ b/login.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg bg-light"></nav>
+        <nav class="navbar navbar-dark navbar-expand-lg dark-bg"></nav>
     </header>
     <div class="wrapper">
         <form>
