--- a/details.html
+++ b/details.html
@@ -11,7 +11,7 @@
     <nav class="navbar navbar-dark navbar-expand-lg dark-bg"></nav>
 </header>
     <div class="wrapper">
-    <div class="container mt-5 mb-5">
+    <div class="container mt-5 mb-5 bg-light rounded">
         <div class="row d-flex justify-content-center">
             <div class="col-md-10">
                 <div class="row">
