--- a/details.html
+++ b/details.html
@@ -11,7 +11,8 @@
     <nav class="navbar navbar-dark navbar-expand-lg dark-bg"></nav>
 </header>
     <div class="wrapper">
-    <div class="container mt-5 mb-5 bg-light rounded">
+        <div class="container back"> <a href="watches.html"><i class="fas fa-arrow-left"></i> Back</a> </div>
+    <div class="details-container container mt-5 mb-5 bg-light rounded">
         <div class="row d-flex justify-content-center">
             <div class="col-md-10">
                 <div class="row">
@@ -20,12 +21,9 @@
                     </div>
                     <div class="col-md-6">
                         <h1></h1>
-                        <div>
                          <h3></h3>
-                         <i id="shopping-cart"></i> 
-                        </div>
-                        
                         <p class="description"></p>
+                        <button class="btn btn-primary" id="addToCart"></button>
                     <div> 
                     </div>
                     </div>
