--- a/user.html
+++ b/user.html
@@ -13,7 +13,7 @@
     </header>
     <div class="wrapper">
       
-      <div class="container">
+      <div class="container rounded user-container">
         <h1></h1>
       <button class="btn btn-danger mb-3" id="logout">Log out</button>
         <p>
