--- a/login.html
+++ b/login.html
@@ -13,6 +13,7 @@
     </header>
     <div class="wrapper">
         <form>
+            <div class="container login-container rounded">
             <div class="display-message">
             </div>
             <div class="input-group mb-3">
@@ -26,6 +27,7 @@
             <button class="btn btn-primary">Submit</button>
         </form>
     </div>
+</div>
     <footer></footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
     <script src="js/login.js" type="module"></script>
