--- a/edit.html
+++ b/edit.html
@@ -13,7 +13,7 @@
     </header>
     <div class="wrapper">
         <h1 class="text-center"></h1>
-        <div class="display-message"></div>
+        <div class="container display-message"></div>
         <div class="container">
           <div class="row row-cols-1 row-cols-lg-2">
         <img src="" class="img-thumbnail d-block mx-auto" alt="...">
