--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <div class="hero-img banner">
         <h1 class="text-uppercase">Exclusive watches</h1>
       </div>
-      <div class="text-center">
+      <div class="container rounded-top text-center margin-top">
       <h2>Featured</h2>
     </div>
       <div class="container">
