--- a/edit.html
+++ b/edit.html
@@ -52,7 +52,14 @@
       </div>
       </div>
       </div>
-      <footer></footer>
+      <footer>
+        <div class="footer-icons row row-cols-5">
+          <i class="fab fa-twitter"></i>
+          <i class="fab fa-facebook-f"></i>
+          <i class="fab fa-instagram"></i>
+        </div>
+        <p class="copyright">Copyright&copy; WATCHBASE </p>
+      </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
     <script src="js/edit.js" type="module"></script>
 </body>
