Adding fakeshop api placeholder

--- a/index.html
+++ b/index.html
@@ -15,14 +15,15 @@
       <div class="hero-img banner">
         <h1 class="text-uppercase">Exclusive watches</h1>
       </div>
+      <div> </div>
       <div class="container rounded-top text-center margin-top">
       <h2>Featured</h2>
     </div>
       <div class="container">
         <div class="featured-container gap-1 row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 row-cols-xl-5">
-          <div class="spinner-grow text-primary" role="status">
+          <!-- <div class="spinner-grow text-primary" role="status">
             <span class="visually-hidden">Loading...</span>
-          </div>
+          </div> -->
         </div>
         </div>
       </div>
